[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiver"
version = "0.1.01"
description = "A library for managing and querying time series data"
readme = "README.md"
authors = [
    {name = "some guy", email = "@finblocks.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.optional-dependencies]

[project.urls]
Homepage = ""

[tool.setuptools]
packages = ["quiver"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.setuptools.package-dir]
"" = "."
